--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,23 +41,21 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
 
-
     def app_compat = "1.2.0"
     implementation "androidx.appcompat:appcompat:$app_compat"
 
     def constraint_layout = "2.0.4"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
 
-    def androidx_ui = "1.0.0-alpha07"
-    implementation "androidx.ui:ui-tooling:$androidx_ui"
-
     def compose = "1.0.0-beta02"
+
     implementation "androidx.compose.ui:ui:$compose"
     implementation "androidx.compose.foundation:foundation:$compose"
     implementation "androidx.compose.material:material:$compose"
     implementation "androidx.compose.material:material-icons-core:$compose"
     implementation "androidx.compose.material:material-icons-extended:$compose"
-
+    // Make sure androidx.compose is used or preview will not work
+    implementation "androidx.compose.ui:ui-tooling:$compose"
     implementation 'com.google.android.material:material:1.3.0'
 
     def compose_constraint = "1.0.0-alpha05"
