--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.navigation:navigation-runtime:2.3.4'
 
     def app_compat = "1.2.0"
     implementation "androidx.appcompat:appcompat:$app_compat"
