--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,9 @@ dependencies {
 
     // Image Loading
     implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.2"
-}
+
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "com.google.truth:truth:1.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'}
