--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,78 +16,97 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation"  : "$projectDir/schemas".toString(),
+                        "room.incremental"     : "true",
+                        "room.expandProjection": "true"]
+            }
+        }
 
-    buildFeatures {
-        compose true
-    }
+        buildFeatures {
+            compose true
+        }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+        kotlinOptions {
+            jvmTarget = '1.8'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
+
+    dependencies {
+
+        implementation 'androidx.core:core-ktx:1.3.2'
+        implementation 'androidx.navigation:navigation-runtime:2.3.4'
+
+        def app_compat = "1.2.0"
+        implementation "androidx.appcompat:appcompat:$app_compat"
+
+        def constraint_layout = "2.0.4"
+        implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
+
+        def compose = "1.0.0-beta03"
+
+        implementation "androidx.compose.ui:ui:$compose"
+        implementation "androidx.compose.foundation:foundation:$compose"
+        implementation "androidx.compose.material:material:$compose"
+        implementation "androidx.compose.material:material-icons-core:$compose"
+        implementation "androidx.compose.material:material-icons-extended:$compose"
+        // Make sure androidx.compose is used or preview will not work
+        implementation "androidx.compose.ui:ui-tooling:$compose"
+        implementation 'com.google.android.material:material:1.3.0'
+
+        def compose_constraint = "1.0.0-alpha05"
+        implementation "androidx.constraintlayout:constraintlayout-compose:$compose_constraint"
+
+        def compose_activity = "1.3.0-alpha05"
+        implementation "androidx.activity:activity-compose:$compose_activity"
+
+        implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
+
+        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+        implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
+
+        def moshi = "1.11.0"
+        implementation "com.squareup.moshi:moshi-kotlin:$moshi"
+        implementation "com.squareup.moshi:moshi-kotlin-codegen:$moshi"
+        implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+        def hilt = "2.33-beta"
+        implementation "com.google.dagger:hilt-android:$hilt"
+        kapt "com.google.dagger:hilt-android-compiler:$hilt"
+
+        def glide = "4.11.0"
+        implementation "com.github.bumptech.glide:glide:$glide"
+        kapt "com.github.bumptech.glide:compiler:$glide"
+
+        // Image Loading
+        implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.2"
+
+        // Persistence Model
+        def room_version = "2.2.6"
+
+        implementation "androidx.room:room-runtime:$room_version"
+        kapt "androidx.room:room-compiler:$room_version"
+        // optional - Kotlin Extensions and Coroutines support for Room
+        implementation "androidx.room:room-ktx:$room_version"
+        // optional - Test helpers
+        testImplementation "androidx.room:room-testing:$room_version"
+
+        // Testing
+        testImplementation 'junit:junit:4.13.2'
+        testImplementation "com.google.truth:truth:1.1"
+        androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     }
 }
-
-dependencies {
-
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.navigation:navigation-runtime:2.3.4'
-
-    def app_compat = "1.2.0"
-    implementation "androidx.appcompat:appcompat:$app_compat"
-
-    def constraint_layout = "2.0.4"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
-
-    def compose = "1.0.0-beta03"
-
-    implementation "androidx.compose.ui:ui:$compose"
-    implementation "androidx.compose.foundation:foundation:$compose"
-    implementation "androidx.compose.material:material:$compose"
-    implementation "androidx.compose.material:material-icons-core:$compose"
-    implementation "androidx.compose.material:material-icons-extended:$compose"
-    // Make sure androidx.compose is used or preview will not work
-    implementation "androidx.compose.ui:ui-tooling:$compose"
-    implementation 'com.google.android.material:material:1.3.0'
-
-    def compose_constraint = "1.0.0-alpha05"
-    implementation "androidx.constraintlayout:constraintlayout-compose:$compose_constraint"
-
-    def compose_activity = "1.3.0-alpha05"
-    implementation "androidx.activity:activity-compose:$compose_activity"
-
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
-
-    def moshi = "1.11.0"
-    implementation "com.squareup.moshi:moshi-kotlin:$moshi"
-    implementation "com.squareup.moshi:moshi-kotlin-codegen:$moshi"
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-
-    def hilt = "2.33-beta"
-    implementation "com.google.dagger:hilt-android:$hilt"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt"
-
-    def glide = "4.11.0"
-    implementation "com.github.bumptech.glide:glide:$glide"
-    kapt "com.github.bumptech.glide:compiler:$glide"
-
-    // Image Loading
-    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.2"
-
-    // Testing
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation "com.google.truth:truth:1.1"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'}
