--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
+import dependencies.Versions
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.hilt_version = '2.33-beta'
+    ext.kotlin_version = Versions.kotlin
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha11'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.android.tools.build:gradle:${Versions.gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
