--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.recipecompose">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -13,8 +15,8 @@
         android:supportsRtl="true">
         <activity
             android:name=".presentation.MainActivity"
-            android:theme="@style/Theme.RecipeCompose.NoActionBar"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.RecipeCompose.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
