--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${Versions.gradle}"
+        classpath "com.android.tools.build:gradle:7.0.0-alpha15"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
         classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:${Versions.junit5}"
